--- a/000-main.tex
+++ b/000-main.tex
@@ -53,7 +53,9 @@
 \newtheorem*{hint}{Hint}% from `amsthm'
 
 \newtcbtheorem[number within=section]{definition}{Definition}%
-{colback=orange!5,colframe=yellow!35!black,fonttitle=\bfseries}{def}
+{colback=orange!5,colframe=yellow!35!black,fonttitle=\bfseries,
+  subtitle style={boxrule=0.4pt, colback=yellow!65!black,coltitle=black}
+}{def}
 
 \newtcbtheorem[number within=section]{theorem}{Theorem}%
 {colback=yellow!5,colframe=lime!35!black,fonttitle=\bfseries}{th}
@@ -65,10 +67,26 @@
 {colback=red!5,colframe=red!55!black,fonttitle=\bfseries}{rec}
 
 \newtcbtheorem[number within=section]{exercise}{Exercise}%
-{colback=purple!5,colframe=purple!35!black,fonttitle=\bfseries}{rec}
+{colback=purple!5,colframe=purple!35!black,fonttitle=\bfseries}{exer}
 
 \newtcbtheorem[number within=section]{question}{Question}%
-{colback=purple!5,colframe=green!35!black,fonttitle=\bfseries}{rec}
+{colback=purple!5,colframe=green!35!black,fonttitle=\bfseries}{qu}
+
+\newtcbtheorem[number within=section]{example}{Example}%
+{colback=white,colframe=white!35!black,fonttitle=\bfseries}{ex}
+
+\newtcolorbox{marker}[1][]{enhanced,
+  before skip balanced=2mm,after skip balanced=3mm,
+  boxrule=0.4pt,left=5mm,right=2mm,top=1mm,bottom=1mm,
+  colback=yellow!50,
+  colframe=yellow!20!black,
+  sharp corners,rounded corners=southeast,arc is angular,arc=3mm,
+  underlay={%
+    \path[fill=tcbcolback!80!black] ([yshift=3mm]interior.south east)--++(-0.4,-0.1)--++(0.1,-0.2);
+    \path[draw=tcbcolframe,shorten <=-0.05mm,shorten >=-0.05mm] ([yshift=3mm]interior.south east)--++(-0.4,-0.1)--++(0.1,-0.2);
+    \path[fill=yellow!50!black,draw=none] (interior.south west) rectangle node[white]{\Huge\bfseries !} ([xshift=4mm]interior.north west);
+    },
+  drop fuzzy shadow,#1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % METADATA
