--- a/2022-09-23.tex
+++ b/2022-09-23.tex
@@ -1,4 +1,4 @@
-\section{A glimpse into Bayesian methods (for supervised ML)}
+\section[A glimpse into Bayesian methods]{A glimpse into Bayesian methods (for supervised ML)}
 \index{bayesian}
 
 We have a data sample \(D = \{ x^i, y^i\}\quad i = 1, \dots, n\)
