--- a/theory/complexity.tex
+++ b/theory/complexity.tex
@@ -26,8 +26,7 @@
   of the largest set $S$ that can be shattered by $\mathcal{F}$.
 \end{definition}
 
-\begin{ex}
-  Intervals on the real line ($d = 1$)
+\begin{example}{Intervals on the real line ($d = 1$)}{}
   \begin{equation*}
     \mathcal{F} = \{[a,\,b]\mid a < b \in \mathds{R}\}
   \end{equation*}
@@ -76,10 +75,11 @@
 
 	\end{tikzpicture}
 \end{figure}
-\end{ex}
+\end{example}
 
-\begin{ex}
+\begin{example}{
   Axis aligned rectangles in $\mathds{R}^2$ ($d = 2$)
+}{}
   \begin{equation*}
     \mathcal{F} = \{[a_1,\,b_1]\times [a_2,\,b_2]\mid a_1 < b_1,\, a_2 < b_2 \in \mathds{R}\}
   \end{equation*}
@@ -136,7 +136,7 @@
 	\end{tikzpicture}
   \caption{Axis aligned rectangles in $\mathds{R}^2$}
 \end{figure}
-\end{ex}
+\end{example}
 
 \begin{note}
   Radamaiher complexity encompases the VC-dimension adding
