--- a/001-preamble.tex
+++ b/001-preamble.tex
@@ -3,7 +3,7 @@
 %% LaTeX preamble, load in main.tex with: \input{preamble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass[12pt, oneside]{article}
+\documentclass[12pt, oneside]{book}
 \usepackage[a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
 
 % for debugging overfulls
