--- a/000-main.tex
+++ b/000-main.tex
@@ -14,6 +14,7 @@
 \setkeys{Gin}{width=.9\textwidth, keepaspectratio}
 
 \usepackage{fancyhdr}
+\usepackage{relsize}
 
 % Center figures by default
 \makeatletter
@@ -145,12 +146,13 @@
 \include{2022-10-07} % Teoria
 \include{theory/SVMs}
 \include{theory/complexity}
+\include{theory/rkhs}
 
-\chapter{Problems}
+% \chapter{Problems}
 % Problem sessions
-\include{2022-10-02}
-\include{problems/2022-10-10}
-\include{problems/SVM}
+% \include{2022-10-02}
+% \include{problems/2022-10-10}
+% \include{problems/SVM}
 
 \nocite{*}
 
