--- a/theory/SVMs.tex
+++ b/theory/SVMs.tex
@@ -1,6 +1,6 @@
 %! TEX root = ../000-main.tex
 % 2022-10-07
-\section{Support Vector Machines}
+\chapter{Support Vector Machines}
 \index{SVM}
 
 \subsection{Linear SVM}
