--- a/2022-10-02.tex
+++ b/2022-10-02.tex
@@ -1,6 +1,6 @@
-\section{Problems}
+\chapter{GLMs}
 
-\subsection{Ridge Regression}
+\section{Ridge Regression}
 
 The optimal value for the regularization parameter $\lambda$ in \emph{ridge regression} is:
 
@@ -8,7 +8,7 @@ The optimal value for the regularization parameter $\lambda$ in \emph{ridge regr
 	\lambda^* = \frac{\sigma^2}{n \sigma_{\omega}^2}
 \end{equation}
 
-\subsubsection{Predictive distribution} % (fold)
+\subsection{Predictive distribution} % (fold)
 
 \paragraph{``Full Bayessian''} Suppose we are given a \emph{new data point}
 \(x^0 \to y^0\).
