--- a/theory/complexity.tex
+++ b/theory/complexity.tex
@@ -149,7 +149,7 @@
 	Let $\mathcal{F}_{lim}^m$ be the class of linear binary classifiers that leave
 	a margin at least $m$, that is:
 	\begin{equation*}
-		\mathcal{F}_{lin}^m := \{ x \mapsto \text{sign}( \omega^T x + b), \;
+		\mathcal{F}_{lin}^m \coloneqq \{ x \mapsto \text{sign}( \omega^T x + b), \;
 		\lVert \omega \rVert \leq \frac{1}{m^2}, \;
 		\omega, x \in \mathds{R}^d,\;
 		b \in \mathds{R} \}
@@ -168,7 +168,7 @@
 
 Consider the standard SVM classifier $\mathcal{F}_{lin}$:
 \begin{align*}
-	\mathcal{F}_{lin} := \{ x \mapsto \text{sign}( \omega^T x + b), \;
+	\mathcal{F}_{lin} \coloneqq \{ x \mapsto \text{sign}( \omega^T x + b), \;
 	\lVert \omega \rVert \leq 1, \;
 	\omega, x \in \mathds{R}^d,\;
 	b \in \mathds{R} \} \\
