--- a/theory/SVMs.tex
+++ b/theory/SVMs.tex
@@ -1,9 +1,9 @@
 %! TEX root = ../000-main.tex
 % 2022-10-07
-\chapter{Support Vector Machines}
+\chapter[SVMs]{Support Vector Machines}
 \index{SVM}
 
-\subsection{Linear SVM}
+\section{Linear SVM}
 \label{sec:linear-svm}
 \index{linear SVM}
 
@@ -151,7 +151,7 @@ The Lagrangian function:
 % 2022-10-14
 
 \begin{align*}
-	\mathscr{L}_\text{dual}(\alpha) = \sum_{i=1}^n \alpha_i - \frac{1}{2} \sum_{i=1}^n \sum_{j=1}^n \alpha_i \alpha_j y^i y^j (x^i)^T x^j \\
+  \mathscr{L}_\text{dual}(\alpha) = \sum_{i=1}^n \alpha_i - \frac{1}{2} \mathlarger{\sum_{i=1}^n} \sum_{j=1}^n \alpha_i \alpha_j y^i y^j (x^i)^T x^j \\
 	\text{goal} \quad \max_{\alpha} \mathscr{L}_\text{dual}(\alpha)                                                                       \\
 	\text{subject to} \quad
 	\begin{rcases*}
@@ -332,7 +332,7 @@ $\xi_i$ is the amount needed s.t. $y^i (\omega^T x^i + b) \geq 1$.
 				\end{scope}
 
 				\draw[<->,orange,line width=2pt] (-34,\sep) -- (-34,-\sep);
-				\node[orange,anchor=north,rotate=\rot-90,fill=white] at (-34.25,0) {margin = $\frac{2}{\lVert \omega \rVert}$};
+				\node[orange!90!black,anchor=north,rotate=\rot-90,fill=white] at (-34.25,0) {margin = $\frac{2}{\lVert \omega \rVert}$};
 
 				\pgfplotsinvokeforeach{0.00,0.1,...,1.00}{
 					\node [leftNode] at (rand*30-20,\sep+rnd*30) {};
