--- a/2022-09-30.tex
+++ b/2022-09-30.tex
@@ -63,7 +63,8 @@ Suppose we chose $\mathcal{F}, L, \Omega$ Questions:
 
 A model $f_\theta$ is linear when it has a linear dependence on its parameters.
 
-ex:
+\tcblower
+For example:
 \begin{align*}
 	d      & = 10                           \\
 	f_c(x) & = f(x;c)                       \\
