--- a/problems/2022-10-10.tex
+++ b/problems/2022-10-10.tex
@@ -11,7 +11,7 @@ Now, we know that, using Bayes formula:
 
 This is called \emph{normalized exponential} or \emph{softmax}.
 
-Suppose that $P(\omega_i \mid x) >> P(\omega_j  \mid x), \; i \neq j$
+Suppose that $P(\omega_i \mid x) \gg P(\omega_j  \mid x), \; i \neq j$
 $\Rightarrow P(\omega_i \mid x) \leq 1, P(\omega_j \mid x) \geq 0, \; i \neq j$
 $\sum_{j=1}^c P(x \mid \omega_j) = 1$.
 
