--- a/problems/SVM.tex
+++ b/problems/SVM.tex
@@ -3,7 +3,7 @@
 \subsection{SVM exercises}
 
 \begin{exercise}[breakable]{}{}
-	Consider a hard-margin SVM. We know that for all Svs $x_i$:
+	Consider a hard-margin SVM. We know that for all SVs $x_i$:
 	\begin{equation}
 		\label{eq:svm:margin}
 		\widehat\omega^T x^i + \widehat{b} = y^i
