--- a/theory/SVMs.tex
+++ b/theory/SVMs.tex
@@ -237,19 +237,16 @@ The Lagrangian function:
 \end{definition}
 
 \begin{theorem}{LOO analysis}{looanal}
-	\begin{lemma}{
-			The average LOO-CV error $f_n$ data sets sets of size $n \geq 2$
+	\begin{lemma}{}{}
+			The average LOO-CV error $f_n$ data sets of size $n \geq 2$
 			is an unbiased estimator of the average (true) generalization
 			error for data sets of size $n=1$.
-		}
-
 		\begin{align*}
 			\mathds{E}_{D^n \sim p^n}
 			\left[ \hat{R}_{LOOCV}(f_{D_n}) \right] =
 			\mathds{E}_{D^{n-1} \sim p^{n-1}} \left[{R_{LOOCV}(f_{D_n})} \right]
 		\end{align*}
 	\end{lemma}
-
 	Let $f_{D_n}$ as in the lemma, let $SV(f_{D_n})$ be the set of
 	support vectors in $D_n$. Then:
 	\begin{equation*}
@@ -258,8 +255,10 @@ The Lagrangian function:
 			\frac{\left| SV(f_{D_n}) \right|}{n + 1}
 			\right]
 	\end{equation*}
-
-	This is an argument in favor of \iemph{sparsity} (def.~\ref{def:sparsity}).
+  \tcblower
+  \begin{note}
+	  This is an argument in favor of \iemph{sparsity} (def.~\ref{def:sparsity}).
+  \end{note}
 \end{theorem}
 
 \begin{definition}{Sparsity}{sparsity}
@@ -398,7 +397,9 @@ these two goals.
 \begin{tikzpicture}
 	\pgfmathsetseed{1234}
 	\begin{axis}[
-			% width=0.8\textwidth,
+			width=0.8\textwidth,
+      height=0.5\textwidth,
+      axis equal,
 			xmin=-3,xmax=3.5,
 			ymin=-1,ymax=5,
 			xtick={0,1},
@@ -406,10 +407,12 @@ these two goals.
 			axis lines=middle,
 			xlabel=$z$,
       yticklabel style={below left},
+      legend pos=north east,
+      legend cell align={left}
 		]
 		% quadratic hinge loss
-		\draw[green, line width=2pt] (1,0) -- (2,0);
-		\addplot[green, line width=2pt, domain=-3:1] {(1 - x)^2};
+		\draw[green!70!black, line width=2pt] (1,0) -- (2,0);
+		\addplot[green!70!black, line width=2pt, domain=-3:1] {(1 - x)^2};
 		\addlegendentry{quadratic hinge loss}
 
 		% hinge loss
